feat: Add intent to open download folder

--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -45,6 +45,12 @@
     style="@style/ActivityDetail.TextView"
     tools:text="file.zip" />
 
+  <!-- Open Download Image -->
+  <ImageView
+    android:id="@+id/image_open_download"
+    style="@style/ContentDetail.ImageView"
+    android:contentDescription="@string/open_download_folder" />
+
   <!-- Download Size Label -->
   <TextView
     android:id="@+id/text_download_size_label"
