--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
   <color name="purple">#8657D8</color>
+  <color name="colorLink">#03A9F4</color>
 </resources>
